package com.jambit.onboarding2020.tbrpg.domain.Player;

public class EnemyDeadException extends Exception{

    public EnemyDeadException(String message) {
        super(message);
    }
}
