package com.jambit.onboarding2020.tbrpg.domain.Player;

public class PlayerDeadException extends EnemyDeadException {

    public PlayerDeadException(String message) {
        super(message);
    }
}
